# ionFinder

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.txt  Makefile  README.md  build.sh  configure  cpPleiades.sh  helpFile.man
citFinder/: citFinder.hpp  main.cpp
db/: aaMasses.txt  aaMasses_temp_2.txt  makeMS2HelpFile.man  staticModifications.txt  staticModifications_diffModTest.txt
db/citFinder/: usage.txt
db/ms2_annotator/: usage.txt
doc/doxygen/: Doxyfile
doc/fig/: fragment_ion_masses.cdx  ror_pad_8469.afdesign
doc/tex/: citFinder_userGuide.aux  citFinder_userGuide.out  citFinder_userGuide.tex  citFinder_userGuide.toc  containsCit_decision_tree.tex  ionType_decision_tree.fdb_latexmk  ionType_decision_tree.fls  ionType_decision_tree.tex
etc/: maxquant_constants.config  maxquant_constants.py.in  scaffold_constants.config  scaffold_constants.py.in  spectrum_constants.config  spectrum_constants.hpp.in  spectrum_constants.py.in  tsv_constants.cmake.in  tsv_constants.config  tsv_constants.hpp.in  tsv_constants.py.in
examples/: README.md
examples/DTASelect-filter/20190912_Thompson_PAD2_GlucTryp_t1/: 20190912_Thompson_PAD2_GlucTryp_t1_01.ms2  DTASelect-filter.txt  peptide_cit_stats.tsv
examples/DTASelect-filter/20190912_Thompson_PAD2_GlucTryp_t2/: 20190912_Thompson_PAD2_GlucTryp_t2_01.ms2  DTASelect-filter.txt
examples/DTASelect-filter/20190912_Thompson_PAD2_GlucTryp_t3/: 20190912_Thompson_PAD2_GlucTryp_t3_01.ms2  DTASelect-filter.txt
examples/DTASelect-filter/20190912_Thompson_PAD2_trypsin_t1/: 20190912_Thompson_PAD2_trypsin_t1_01.ms2  DTASelect-filter.txt
examples/DTASelect-filter/20190912_Thompson_PAD2_trypsin_t2/: 20190912_Thompson_PAD2_trypsin_t2_01.ms2  DTASelect-filter.txt  sequest.params
examples/MaxQuant/: msms.tsv
examples/Scaffold/: 02207a_BB1-TUM_mod_citrullination_l_13_01_01-DDA-1h-R1.mzML  02207a_BB2-TUM_mod_citrullination_l_14_01_01-DDA-1h-R1.mzML  02207a_BB3-TUM_mod_citrullination_l_15_01_01-DDA-1h-R1.mzML  spectrum_report.tsv
examples/tsv/: 02207a_BB1-TUM_mod_citrullination_l_13_01_01-DDA-1h-R1.mzML  02207a_BB2-TUM_mod_citrullination_l_14_01_01-DDA-1h-R1.mzML  02207a_BB3-TUM_mod_citrullination_l_15_01_01-DDA-1h-R1.mzML  input.tsv
include/: aaDB.hpp  bufferFile.hpp  calcLableLocs.hpp  config.hpp  dtafilter.hpp  fastaFile.hpp  fileBuffer.hpp  geometry.hpp  gitVersion.hpp  main.hpp  ms2.hpp  ms2Spectrum.hpp  ms2_annotator.hpp  params.hpp  paramsBase.hpp  peptide.hpp  scanData.hpp  sequestParams.hpp  tsvFile.hpp  utils.hpp
include/citFinder/: citFinder.hpp  datProc.hpp  dtafilter.hpp  dtafilterFiles.hpp  main.hpp  params.hpp
include/ionFinder/: datProc.hpp  dtafilterFiles.hpp  inputFiles.hpp  ionFinder.hpp  main.hpp  params.hpp
include/ms2_annotator/: dtafilter.hpp  dtafilterFile.hpp  main.hpp  ms2_annotator.hpp  params.hpp
ionFinder/: CMakeLists.txt  configure
ionFinder/cmake/: FindPython.cmake  FindUtils.cmake  Findgroff.cmake  Findmstoolkit.cmake  FindpeptideUtils.cmake  Findps2pdf.cmake  Findutils.cmake  config.h.in  git_info.h.in  git_watcher.cmake  tsv_constants.cmake
ionFinder/db/: staticModifications.txt
ionFinder/doc/doxygen/: Doxyfile.in
ionFinder/doc/tex/: citFinder_userGuide.tex  containsCit_decision_tree.afdesign  containsCit_decision_tree.tex  ionType_decision_tree.afdesign  ionType_decision_tree.tex
ionFinder/doc/tex/examples/: contain_cit_decision_tree_examples.afdesign  ion_type_decision_tree_examples.afdesign  ion_type_decision_tree_examples_2.afdesign
ionFinder/include/: aaDB.hpp  calcLableLocs.hpp  constants.hpp  dtafilter.hpp  geometry.hpp  ms2.hpp  ms2Spectrum.hpp  msInterface.hpp  paramsBase.hpp  peptide.hpp  scanData.hpp  sequestParams.hpp  statistics.hpp
ionFinder/include/ionFinder/: datProc.hpp  inputFiles.hpp  ionFinder.hpp  main.hpp  params.hpp
ionFinder/include/ms2_annotator/: dtafilterFile.hpp  main.hpp  ms2_annotator.hpp  params.hpp
ionFinder/man/: updateMan.in
ionFinder/man/ionFinder/: helpFile.roff  helpFile.roff.in  usage.txt  usage.txt.in
ionFinder/man/ms2_annotator/: helpFile.roff
ionFinder/share/: staticModifications.txt
ionFinder/src/: aaDB.cpp  calcLableLocs.cpp  dtafilter.cpp  geometry.cpp  ms2.cpp  ms2Spectrum.cpp  msInterface.cpp  paramsBase.cpp  peptide.cpp  scanData.cpp  sequestParams.cpp  statistics.cpp
ionFinder/src/ionFinder/: datProc.cpp  inputFiles.cpp  main.cpp  params.cpp
ionFinder/src/ms2_annotator/: dtafilterFile.cpp  main.cpp  params.cpp
man/ionFinder/: helpFile.roff  helpFile.txt
man/ms2_annotator/: helpFile.man
ms2_annotator.xcodeproj/: project.pbxproj
ms2_annotator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ms2_anotator.xcodeproj/: project.pbxproj
ms2_anotator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
python/: CMakeLists.txt  make_ms2.py  parent_parser.py  parse_scaffold.py  progress_bar.py  run_make_ms2.py
python/modules/: __init__.py  atom_table.py  molecular_formula.py  ms2_spectrum.py  parent_parser.py  plot_spectrum.py  spectrum_constants.py  tsv_constants.py
python/parsers/: parse_maxquant.py  parse_scaffold.py
python/parsers/modules/: utils.py  (+6 more)
rpackages/: install_packages.R
rpackages/ms2Spectrum/: DESCRIPTION  Makevars  NAMESPACE
rscripts/: cppFunctions.cpp  functions.R  main.R  makeMs2.R  makeSpectrum.R  rectTest.R  spectrumTest.R  temp.R
rscripts/include/: spectrum.hpp
rscripts/src/: cppFunctions.cpp  spectrum.cpp
scripts/: addPythonFiles.sh  configure_file  configure_file.py  updateMan.sh
src/: aaDB.cpp  aaDB.hpp  bufferFile.cpp  calcLableLocs.cpp  calcLableLocs.hpp  dtafilter.cpp  fastaFile.cpp  filleBuffer.cpp  geometry.cpp  geometry.hpp  main.cpp  ms2.cpp  ms2.hpp  ms2Spectrum.cpp  params.cpp  paramsBase.cpp  peptide.cpp  peptide.hpp  scanData.cpp  sequestParams.cpp  tsvFile.cpp  utils.cpp  utils.hpp
src/citFinder/: datProc.cpp  dtafilter.cpp  dtafilterFiles.cpp  main.cpp  params.cpp  params.hpp
src/ionFinder/: datProc.cpp  dtafilterFiles.cpp  inputFiles.cpp  main.cpp  params.cpp
src/ms2_annotator/: dtafilter.cpp  dtafilterFile.cpp  main.cpp  params.cpp
(+33 files in other folders)
